--- a/mambabook/base/Dockerfile.cuda
+++ b/mambabook/base/Dockerfile.cuda
@@ -3,22 +3,19 @@
 
 # Ubuntu 22.04 (jammy)
 # https://hub.docker.com/_/ubuntu/tags?page=1&name=jammy
-ARG ROOT_CONTAINER=hieupth/micromamba:cu114-runtime
+ARG CUDA=114
+ARG FLAVOR=runtime
+FROM hieupth/micromamba:cu${CUDA}-${FLAVOR}
 
-FROM $ROOT_CONTAINER
-
-LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 ARG NB_USER="jovyan"
 # UID 1000 is already associated with the "mambauser" in the base image
 ARG NB_UID="1001"
 ARG NB_GID="100"
-
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 USER root
-
 # Install all OS dependencies for notebook server that starts but lacks all
 # features (e.g., download as all possible file formats)
 ENV DEBIAN_FRONTEND noninteractive
@@ -60,8 +57,8 @@ RUN chmod a+rx /usr/local/bin/fix-permissions
 # Enable prompt color in the skeleton .bashrc before creating the default NB_USER
 # hadolint ignore=SC2016
 RUN sed -i 's/^#force_color_prompt=yes/force_color_prompt=yes/' /etc/skel/.bashrc && \
-   # Add call to conda init script see https://stackoverflow.com/a/58081608/4413446
-   echo 'eval "$(command conda shell.bash hook 2> /dev/null)"' >> /etc/skel/.bashrc
+    # Add call to conda init script see https://stackoverflow.com/a/58081608/4413446
+    echo 'eval "$(command conda shell.bash hook 2> /dev/null)"' >> /etc/skel/.bashrc
 
 # Create NB_USER with name jovyan user with UID=1000 and in the 'users' group
 # and make sure these dirs are writable by the `users` group.
@@ -76,10 +73,8 @@ RUN echo "auth requisite pam_deny.so" >> /etc/pam.d/su && \
     fix-permissions "${CONDA_DIR}"
 
 USER ${NB_UID}
-
 # Pin python version here, or set it to "default"
 ARG PYTHON_VERSION=3.10
-
 # Setup work directory for backward-compatibility
 RUN mkdir "/home/${NB_USER}/work" && \
     fix-permissions "/home/${NB_USER}"
@@ -119,8 +114,7 @@ CMD ["start.sh"]
 
 # Copy local files as late as possible to avoid cache busting
 COPY start.sh /usr/local/bin/
-
 # Switch back to jovyan to avoid accidental container runs as root
 USER ${NB_UID}
-
+# Switch work directory
 WORKDIR "${HOME}"
