--- a/mambabook/book/Dockerfile.cuda
+++ b/mambabook/book/Dockerfile.cuda
@@ -2,7 +2,7 @@
 # Distributed under the terms of the Modified BSD License.
 ARG CUDA=114
 ARG FLAVOR=runtime
-FROM hieupth/cudabook:base-cu${CUDA}-${FLAVOR}
+FROM hieupth/mambabook:base-cu${CUDA}-${FLAVOR}
 
 # Fix: https://github.com/hadolint/hadolint/wiki/DL4006
 # Fix: https://github.com/koalaman/shellcheck/wiki/SC3014
