--- a/mambabook/book/Dockerfile.cuda
+++ b/mambabook/book/Dockerfile.cuda
@@ -14,7 +14,7 @@ USER root
 # features (e.g., download as all possible file formats)
 RUN apt-get update --yes && \
     apt-get install --yes --no-install-recommends \
-    fonts-liberation \
+    fonts-liberation git \
     # - pandoc is used to convert notebooks to html files
     #   it's not present in aarch64 ubuntu image, so we install it here
     pandoc \
@@ -34,9 +34,8 @@ USER ${NB_UID}
 # files across image layers when the permissions change
 WORKDIR /tmp
 RUN mamba install --quiet --yes \
-    'notebook' \
-    'jupyterhub' \
-    'jupyterlab' && \
+    'notebook' 'jupyterhub' 'jupyterlab' \
+    'jupyter-server-proxy' 'jupyterlab-git' 'jupyterlab-pullrequests' && \
     jupyter notebook --generate-config && \
     mamba clean --all -f -y && \
     npm cache clean --force && \
