--- a/mambabook/book/Dockerfile.cuda
+++ b/mambabook/book/Dockerfile.cuda
@@ -34,8 +34,10 @@ USER ${NB_UID}
 # files across image layers when the permissions change
 WORKDIR /tmp
 RUN mamba install --quiet --yes \
+    'python=3' "jupyter_server>=2.0.0" \
     'notebook' 'jupyterhub' 'jupyterlab' \
-    'jupyter-server-proxy' 'jupyterlab-git' 'jupyterlab-pullrequests' && \
+    'jupyter-server-proxy' 'jupyterlab-git' 'jupyterlab-pullrequests' \
+    'jupyterlab-lsp' 'python-lsp-server' 'r-languageserver' && \
     jupyter notebook --generate-config && \
     mamba clean --all -f -y && \
     npm cache clean --force && \
